...
  ToolbarAction.pen: 'Lápiz',
  ToolbarAction.highlighter: 'Resaltador',
  ToolbarAction.eraser: 'Borrador',
  ToolbarAction.selection: 'Selección',
  ToolbarAction.color: 'Color de tinta',
  ToolbarAction.width: 'Grosor de tinta',
  ToolbarAction.penSettings: 'Ajustes del lápiz',
  ToolbarAction.undo: 'Deshacer',
  ToolbarAction.redo: 'Rehacer',
  ToolbarAction.paper: 'Tipo de hoja',
  ToolbarAction.applyPaper: 'Aplicar hoja a todo el cuaderno',
  ToolbarAction.text: 'Insertar texto',
  ToolbarAction.image: 'Insertar imagen',
...
