...
          mainAxisSize: MainAxisSize.min,
          children: [
            TextField(
              controller: title,
              autofocus: true,
              decoration: const InputDecoration(
                labelText: 'Nombre del cuaderno',
              ),
            ),
            const SizedBox(height: 16),
            TextField(
              controller: subject,
              decoration: const InputDecoration(labelText: 'Materia'),
...
      FilledButton(
        onPressed: () => Navigator.pop(context, (
          title: title.text,
          subject: subject.text,
          pattern: pattern,
        )),
        child: const Text('Crear'),
      ),
    ],
  );
}

